@@ -1,6 +1,9 @@
 Noteworthy changes in version 2.5.9 (unreleased)
 ------------------------------------------------
 
+  * gpg: Add the revocation reason to the sigclass of a "rev" line.
+    Regression in 2.5.7.  [T7073]
+
 
   Release-info: https://dev.gnupg.org/T7695
 
